# Closed-Loop-V2

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
core/: config.py  db.py  exceptions.py  logging.py  runtime_state.py  scheduler.py
migrations/: env.py
models/: __init__.py  base.py  module_config.py  normalized_record.py  source_snapshot.py  task_plan.py  task_run.py
plans/: 2026-04-01-backend-phase2-mainline.md  2026-04-01-backend-phase3-real-collectors.md  2026-04-01-backend-phase4-dingtalk-transport.md  2026-04-01-backend-phase5-recognition-enhancement.md  2026-04-01-backend-phase6-executors.md  2026-04-01-backend-phase7-report-matching.md  2026-04-01-frontend-phase8-console.md  2026-04-01-phase9-execution-layer-unification.md  2026-04-01-phase9-inspection-real-execution-polish.md  2026-04-01-phase9-ops-copy-and-aggregation-polish.md  2026-04-01-phase9-proactive-real-execution-polish.md  2026-04-01-phase9-real-environment-smoke.md  2026-04-01-phase9-three-module-real-validation.md  2026-04-01-phase9-visit-real-execution-polish.md  2026-04-01-platform-phase9-ops.md  2026-04-01-project-roadmap.md
repositories/: base.py  module_config_repo.py  normalized_record_repo.py  source_snapshot_repo.py  task_plan_repo.py  task_run_repo.py
scheduler/: jobs.py
schemas/: common.py  inspection.py  ops.py  proactive.py  record.py  snapshot.py  sync.py  task.py  visit.py
scripts/: debug_inspection_pts_ui.py
services/: dingtalk_visit_writeback.py  environment_check.py  module_registry.py  ops_copy.py  ops_service.py  pts_session_service.py  (+3 more)
(+84 files in other folders)
