[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "closed_loop_v2"
version = "0.1.0"
description = "Closed loop platform v2 phase one skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "playwright>=1.53.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "core*", "models*", "repositories*", "scheduler*", "schemas*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
